Overflow made but the issue is that I can't scroll

--- a/GasbyGas/src/Components/OutletManager/MainDashboard.module.css
+++ b/GasbyGas/src/Components/OutletManager/MainDashboard.module.css
@@ -65,9 +65,7 @@
     transition: background-color 0.3s;
 }
 
-.optionContainer:hover {
-    background-color: #34495e;
-}
+
 
 .option{
     padding-left: 10px;
