--- a/GasbyGas/src/Components/OutletManager/Tables/customerTable.module.css
+++ b/GasbyGas/src/Components/OutletManager/Tables/customerTable.module.css
@@ -16,16 +16,14 @@
 
 
 main.table {
-    width: 1100px;
-    height: 90vh;
     background-color: #fff5;
-    margin-top: 80px; 
     /* backdrop-filter: blur(7px);
     box-shadow: 0 .4rem .8rem #0005; */
     border-radius: .8rem;
     text-align: center;
     overflow: hidden;
     text-transform: none;
+    position: relative;
 }
 
 .table__header {
